# Alpha-agent

./: .env.example  .gitignore  CODE_REVIEW.md  README.md  pyproject.toml
config/: ai_model_profiles.example.json  scope_quality_thresholds.json
docs/superpowers/plans/: 2026-05-03-optimization-dedup.md  2026-05-25-throughput-alpha-agent.md
docs/superpowers/specs/: 2026-05-25-throughput-alpha-agent-design.md
knowledge/: generation_patterns.md  optimization_playbook.md  usa_d0_patterns.md  wqb_rules.md
scripts/: alpha_web
src/alpha/: __init__.py  cli.py  clients.py  config.py  context_builder.py  db.py  env_file.py  expression_similarity.py  field_catalog.py  field_scout.py  guards.py  health.py  history_prune.py  logging_utils.py  metrics.py  models.py  preflight.py  profile_compliance.py  queues.py  research_planner.py  scheduler.py  scope_rotation.py  scopes.py  submission.py  web.py  worker.py
tests/: test_ai_integration.py  test_cli.py  test_clients.py  test_config.py  test_context_builder.py  test_db.py  test_env_file.py  test_field_catalog.py  test_field_scout.py  test_guards.py  test_health.py  test_history_prune.py  test_live_adapters.py  test_logging_utils.py  test_metrics.py  test_multi_model.py  test_preflight.py  test_profile_compliance.py  test_queues.py  test_scheduler.py  test_scope_rotation.py  test_submission_flow.py  test_web.py  test_worker.py
