[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-automation"
version = "0.1.0"
description = "WorldQuant BRAIN Alpha 自动探索、回测、筛选与提交代理"
requires-python = ">=3.10"

[project.scripts]
alpha = "alpha.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
